# jpower

./: CMakeLists.txt  README.md  test.c
src/: jpower.c
src/include/: jpower.h
